tests/baselines/reference/assignToEnum.errors.txt
tests/cases/compiler/assignToEnum.ts(2,1): error TS2364: Invalid left-hand side of assignment expression.
tests/cases/compiler/assignToEnum.ts(3,1): error TS2364: Invalid left-hand side of assignment expression.
tests/cases/compiler/assignToEnum.ts(4,1): error TS2364: Invalid left-hand side of assignment expression.
tests/cases/compiler/assignToEnum.ts(5,1): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/compiler/assignToEnum.ts (4 errors) ====
    enum A { foo, bar }
    A = undefined;  // invalid LHS
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    A = A.bar;      // invalid LHS
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    A.foo = 1;      // invalid LHS
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    A.foo = A.bar;  // invalid LHS
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    